--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ select { padding: 10px; font-size: 16px; margin-top: 20px; }
 <h1>荒野乱斗 排位 BP 推荐</h1>
 <select id="mapSelect">
     <option value="">选择地图</option>
-    <option value="紫宝石城">紫宝石城</option>
+    <option value="测试1">测试1</option>
     <option value="硬石矿井">硬石矿井</option>
 </select>
 <div id="result"></div>
 
 <script>
 const maps = {
-  "紫宝石城": { pick: ["派珀","贝尔","曼迪"], ban: ["芽芽","格尔"], avoid: ["公牛","艾尔普里莫"] },
+  "测试1": { pick: ["派珀","贝尔","曼迪"], ban: ["芽芽","格尔"], avoid: ["公牛","艾尔普里莫"] },
   "硬石矿井": { pick: ["塔拉","珍妮特","格尔"], ban: ["曼迪","贝尔"], avoid: ["公牛"] }
 };
 document.getElementById("mapSelect").addEventListener("change", function() {
