--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>荒野乱斗 BP 推荐（分类版）</title>
+<title>荒野乱斗 BP 推荐</title>
 <style>
 body { font-family: Arial; background: #111; color: white; text-align: center; }
 h1 { margin-top: 30px; }
