Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ select { padding: 10px; font-size: 16px; margin: 10px; }
 </head>
 
 <body>
-<h1>荒野乱斗 BP 推荐（分类版）</h1>
+<h1>荒野乱斗 BP 推荐</h1>
 
 <select id="categorySelect">
   <option value="">选择分类</option>
