--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ select { padding: 10px; font-size: 16px; margin: 10px; }
 .pick { color: #00ff88; }
 .ban { color: #ff4444; }
 .avoid { color: #999; }
+.sixpick { color: #88ccff; }
 </style>
 </head>
 
@@ -68,6 +69,7 @@ document.getElementById("mapSelect").addEventListener("change", function() {
             <div class="section pick"><h2>推荐 Pick</h2><p>${data.pick.join("、")}</p></div>
             <div class="section ban"><h2>推荐 Ban</h2><p>${data.ban.join("、")}</p></div>
             <div class="section avoid"><h2>不建议拿</h2><p>${data.avoid.join("、")}</p></div>
+            ${data["六选"] ? `<div class="section sixpick"><h2>六选</h2><p>${data["六选"].join("、")}</p></div>` : ''}
         `;
     } else {
         resultDiv.innerHTML = '';
